# config/routes.js
@@ -1,6 +1,5 @@
 import express from 'express'
 import authRouter from '../routes/auth.js'
-import accountsRouter from '../routes/accounts.js'
 import categoriesRouter from '../routes/categories.js'
 import docsRouter from '../routes/docs.js'
 import indexRouter from '../routes/index.js'
@@ -19,7 +18,6 @@ router.use('/admin/articles', adminArticlesRouter)
 
 router.use('/auth', authRouter)
 router.use('/docs', docsRouter)
-router.use('/api/accounts', accountsRouter)
 router.use('/api/categories', categoriesRouter)
 router.use('/api/sync', syncRouter)
 router.use('/api/transactions', transactionsRouter)
